log
ju., 17 de mar. de 2022 11:50:30: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
37d0175
ju., 17 de mar. de 2022 11:52:36: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
552286f
ju., 17 de mar. de 2022 11:55:32: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
942a7af
ju., 17 de mar. de 2022 11:56:14: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c9f057a
ju., 17 de mar. de 2022 11:56:58: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7d2155d
ju., 17 de mar. de 2022 11:57:11: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
4e7f491
ju., 17 de mar. de 2022 12:00:13: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
578e7b4
ju., 17 de mar. de 2022 12:01:47: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d1eafe2
ju., 17 de mar. de 2022 12:04:43: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
2f76b1e
ju., 17 de mar. de 2022 12:06:11: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
b527eb8
ju., 17 de mar. de 2022 12:08:19: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'prevList':
list.c:60:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   60 |     if(list->current->prev = NULL)return NULL;
      |        ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
45ea0f2
ju., 17 de mar. de 2022 12:08:41: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e30803a
ju., 17 de mar. de 2022 12:10:25: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
6bf5f3f
ju., 17 de mar. de 2022 12:11:24: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
f45fe74
sรก., 19 de mar. de 2022 23:36:25: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
701cb24
